force-app/main/default/objects/Tax_Ops_Task_QE__c/fields/Filing_Method__c.field-meta.xml
<CustomField>
    <fullName>Filing_Method__c</fullName>
    <label>Filing Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>