force-app/main/default/objects/Tax_Ops_Task_QE__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System</label>
    <length>60</length>
    <type>Text</type>
</CustomField>